update maintenance page

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,7 +82,7 @@
 <% end %>
 
 <%= content_for :javascript do %>
-  <%= javascript_include_tag 'maintenance/jcarousellite1.0.1_min', 'maintenance/jquery.countdown' %>
+  <%= javascript_include_tag 'maintenance/jcarousellite1.0.1_min.js', 'maintenance/jquery.countdown.js' %>
   <script type="text/javascript">
     $(function () {
       var austDay = new Date("December 10, 2012 02:15:00");
