logo maintenance page link to administrator site

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div id="header">
     <div id="logo">
-      <%= link_to image_tag("maintenance/logo_rt.png"), new_user_session_path %>
+      <%= link_to image_tag("maintenance/logo_rt.png"), administrator_root_path %>
     </div><!--end logo-->
 
     <div id="contact_details">
