--- a/app/views/administrator/authors/_form.html.erb
+++ b/app/views/administrator/authors/_form.html.erb
@@ -1,10 +1,22 @@
-<h3 class="facebox-title">Category</h3>
+<h3 class="facebox-title">Author</h3>
 
-<%= form_for ['administrator', @category], :remote => true, :html => {:class => 'form'} do |f| %>
-  <%= error_messages(@category).html_safe %>
+<%= form_for ['administrator', @author], :remote => true, :html => {:class => 'form', :multipart => true } do |f| %>
+  <%= error_messages(@author).html_safe %>
   <div class="group">
     <%= f.label 'Name', :class => 'label' %>
     <%= f.text_field :name, :class => 'text_field' %>
+  </div>
+  <div class="group">
+    <%= f.label 'email', :class => 'label' %>
+    <%= f.email_field :email, :class => 'text_field' %>
+  </div>
+  <div class="group">
+    <%= f.label 'Profile', :class => 'label' %>
+    <%= f.cktext_area(:profile, :toolbar => 'AdminSimple') %>
+  </div>
+  <div class="group">
+    <%= f.label 'Avatar', :class => 'label' %>
+    <%= f.file_field :avatar %>
   </div>
   <div class="group navform wat-cf">
     <button type="submit" class="button">
