--- a/app/views/administrator/authors/index.html.erb
+++ b/app/views/administrator/authors/index.html.erb
@@ -1,7 +1,65 @@
 <div class="content">
-  <h2>Under Construct</h2>
+  <h2>Authors</h2>
 
   <div class="inner">
+    <div class="link-button-container">
+      <%= link_to "New Author", new_administrator_author_path, :class => 'link-button', :rel => 'facebox' %>
+      <div class="clear"></div>
+    </div>
 
+    <%= form_tag administrator_destroy_selection_path, :method => :delete do |f| %>
+      <table class="table">
+        <tr>
+          <th class="first">
+            <%= check_box_tag 'select-all', '', false, :class => "checkbox toggle" %>
+          </th>
+          <th>Thumb</th>
+          <th>Name</th>
+          <th>Email</th>
+          <th>Profile</th>
+          <th class="last">&nbsp;</th>
+        </tr>
+        <% @authors.each do |author| %>
+          <tr class="<%= cycle('odd', 'even') %>">
+            <td>
+              <%= check_box_tag 'selection[]', author.id, false, :id => "selection-#{author.id}", :class => 'checkbox' %>
+            </td>
+            <td><%= image_tag "#{author.avatar? ? author.avatar.thumb : 'avatar.png'}", :alt => '-'  %></td>
+            <td><%= author.name %></td>
+            <td><%= author.email %></td>
+            <td><%= truncate(just_text(author.profile), :length => 150) %></td>
+            <td class="last">
+              <%= link_to 'edit', edit_administrator_author_path(author), :rel => 'facebox' %> |
+              <%= link_to 'destroy', administrator_author_path(author), :method => :delete, :confirm => "Are you sure you want to delete this data?" %>
+            </td>
+          </tr>
+        <% end unless @authors.blank? %>
+        <% if @authors.blank? %>
+          <tr class="odd">
+            <td colspan="5" class="no-data">No Data</td>
+          </tr>
+        <% end %>
+      </table>
+      <div class="actions-bar wat-cf">
+        <div class="actions">
+          <%= hidden_field_tag :object, 'Author' %>
+          <%= hidden_field_tag :redirect_url, "#{administrator_authors_path}" %>
+          <button type="submit" class="button">
+            <%= image_tag "cross.png", :alt => '-' %> Delete
+          </button>
+        </div>
+        <div class="pagination">
+          <%= will_paginate @authors %>
+        </div>
+      </div>
+    <% end %>
   </div>
 </div>
+
+<%= content_for :stylesheet do %>
+<style type="text/css">
+  #facebox .content{
+    width: 650px;
+  }
+</style>
+<% end %>
